# fastapi-static

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  app.py  prefetch_quote.py  pyproject.toml  quote_utils.py  requirements.txt
static/: index.html
templates/: index.html
