[tool.poetry]
name = "sample-python-buildpack-asgi"
version = "0.1.0"
description = "A Sample FastAPI Python app configured for Toolforge Build Service"
authors = ["Slavina Stefanova <sstefanova@wikimedia.org>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}
httpx = "^0.27.2"
uvicorn = "^0.30.6"
Jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.ruff.lint]
# add isort
extend-select = ["I"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
